--- a/OpenWheaterMap/Info.plist
+++ b/OpenWheaterMap/Info.plist
@@ -24,6 +24,11 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -41,5 +46,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Preciso da sua localização</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Preciso da sua localização</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Preciso da sua localização</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Preciso da sua localização</string>
 </dict>
 </plist>
